--- a/04/tsconfig.json
+++ b/04/tsconfig.json
@@ -21,6 +21,6 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
-  "include": ["**/**/*.ts"],
+  "include": ["**/**/*"],
   "exclude": ["node_modules", "dist", "dev"]
 }
